--- a/t.tex
+++ b/t.tex
@@ -5,7 +5,7 @@
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
-\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes, placeins}
+\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes, placeins, pdflscape}
 \usepackage[percent]{overpic}
 \usetikzlibrary{positioning, arrows}
 \usepackage{upgreek}
